ui/src/assets/scss/05-components/_navbar.scss
$custom-logo-fill: () !default;
$logo-fill: (
  blue-purple: $blue-purple,
  orange: $orange,
  gray: $grey-dark,
  default: $black
);
$logoFillColor: map-merge($logo-fill, $custom-logo-fill);

.nav {
  margin: 3em 0;

  line-height: 24px;
  color: $blue-grey-dark;

  &.navbar-light .navbar-toggler {
    position: absolute;
    right: 0;
  }

  .container {
    position: relative;
  }

  .nav-inner {
    margin-left: 0;
    margin-right: 0;
    width: 100%;
  }

  .branding {
    font-size: 20px;
    font-weight: 200;

    a,
    a:hover {
      color: $black;
      text-decoration: none;
    }

    a {
      display: block;
    }

    .logo {
      height: 30px;
      display: inline-block;
      margin-right: 5px;
      @each $name, $fill in $logoFillColor {
        &.cs-logo-#{$name} {
          fill: $fill;
        }
      }
    }
    .logo-text {
      @each $name, $fill in $logoFillColor {
        &.logo-text-#{$name} {
          color: $fill;
        }
      }
    }
  }

  #main-nav-bar,
  .user {
    margin-right: -15px;
  }

  .nav-lnks {
    @include media-breakpoint-down(sm) {
      padding-bottom: 1em;
      padding-top: 1em;
    }
  }

  .user {
    // text-align: right;
    font-size: 12px;
    @include media-breakpoint-up(lg) {
      // position: absolute;
      // right: 0;
    }
  }
  // override default NavBar theme
  .navbar-text {
    color: $black;
    @include media-breakpoint-up(lg) {
      padding-bottom: 0;
      padding-top: 0;
    }
  }

  &.navbar-light .navbar-nav .nav-link,
  .navbar-text a {
    color: $blue-purple;
    font-weight: bold;
  }
  .nav-link {
    display: inline;
    padding-left: 1em;
    padding-right: 1em;
    margin-right: 0.5em;
    &:last-child {
      margin-right: 0;
    }
  }
  .active {
    text-decoration: underline;
  }

  .navbar-collapse {
    @include media-breakpoint-down(md) {
      background-color: $grey-light;
      padding: 1em;
      .nav-link {
        border-bottom: 1px solid $grey;
      }
      .navbar-text {
        display: block;
      }
      .navbar-text a {
        display: block;
        border-top: 1px solid $grey;
        padding: 0.5rem 0;
        margin-top: 0.5em;
      }
    }
  }
}

